Update assets and configuration files, add new foreground image, and modify FontManifest and AssetManifest

--- a/assets/assets/lang/en.json
+++ b/assets/assets/lang/en.json
@@ -33,7 +33,7 @@
   "timeScale": "Time Scale",
   "about": "About",
   "acknowledgements": "Acknowledgements",
-  "acknowledgementsDescription": "We would like to thank all the people who have contributed to this project.",
+  "acknowledgementsDescription": "We would like to thank all the people who have contributed to this project with their suggestions, ideas and support. We would also like to thank the institutions that provide the API services that make this application possible.",
   "informationSources": "Information Sources",
   "informationSourcesDescription": "The information used in this application comes from various reliable sources, including:",
   "imageSources": "Image Sources",
@@ -44,7 +44,7 @@
   "paleontologists": "Paleontologists",
   "museums": "Museums",
   "researcherProfileTitle": "Researcher Profile",
-  "introText": "As a professional paleontologist, you will have access to the records that users upload to the database to report new findings. This option is exclusive to professional paleontologists and aims to protect paleontological heritage. Therefore, we require verifying your identity before granting access.\n\nBeing a professional paleontologist is not just about having a professional degree; ethical integrity is also necessary. Therefore, we reserve the right to accept your application if we consider that you have previously engaged in actions that damage, hinder, or harm ethical and quality paleontological work.",
+  "introText": "As a professional paleontologist, (in future releases) you will have access to the records that users upload to the database to report new findings. This option is exclusive to professional paleontologists and aims to protect paleontological heritage. Therefore, we require verifying your identity before granting access.\n\nBeing a professional paleontologist is not just about having a professional degree; ethical integrity is also necessary. Therefore, we reserve the right to accept your application if we consider that you have previously engaged in actions that damage, hinder, or harm ethical and quality paleontological work.",
   "degreeLabel": "Degree",
   "nameLabel": "Name",
   "institutionLabel": "Institution",
@@ -85,15 +85,16 @@
   "resetFilters": "Reset Filters",
   "slideUpForSearchFilters": "Slide up for search filters",
   "searchTaxonHint": "Search for a taxon",
-  "phylum": "Phylum",
-  "class": "Class",
+  "phylum": "Phylum/Division",
+  "className": "Class",
   "order": "Order",
   "family": "Family",
   "genus": "Genus",
   "species": "Species",
   "minMa": "Min Ma",
   "maxMa": "Max Ma",
-  "earlyInterval": "Early Interval: ",
+  "earlyInterval": "Early Interval",
+  "lateInterval": "Late Interval",
   "occurrenceDetails": "Occurrence Details",
   "viewMediaButton": "View Media",
   "loadingMessage": "Loading...",
@@ -206,6 +207,12 @@
   "enterName": "Enter name",
   "eventDateTime": "Event Date and Time",
   "selectDateTime": "Select date and time",
+  "isMultyDayEvent": "Multi-day event",
+  "eventEndDateTime": "Event End Date & Time",
+  "selectEventDateTime": "Select Event Date & Time",
+  "selectEndDateTime": "Select End Date & Time",
+  "endDateRequired": "End date is required for multi-day events",
+  "eventEndDateMustBeAfterStartDate": "End date must be after start date",
   "timeZone": "Time Zone",
   "selectTimeZone": "Select time zone",
   "enterPlace": "Enter place",
@@ -248,5 +255,19 @@
   "editRecord": "Edit Record",
   "deleteRecord": "Delete Record",
   "areYouSureDeleteRecord" : "Are you sure you want to delete this record?",
-  "delete": "Delete"
+  "delete": "Delete",
+  "descriptionOfTheApp": "Where is my fossil? is an application developed by the Mexican project Museo Virtual Nacional, which allows you to explore fossil occurrence data from around the world, explore phylogenies, view images and 3D models of fossils, and much more. Although the databases on occurrences, images, phylogenies, and 3D models are free, the databases of researchers and museums are independently managed by us. The hosting and maintenance of these databases are limited to the available resources, so we decided to include ads in the application to cover the maintenance and development costs of the project. Future versions of the application may reduce or eliminate ads if resources allow or if funding is obtained from other sources.",
+  "followUs": "Follow us on social networks or make a donation to support the project",
+  "acceptTermsText": "By clicking on the 'Submit and login with Google' button, you agree to the terms and conditions of the application",
+  "termsAndConditionsTitle": "Terms and Conditions",
+  "termsAndConditionsContent": "By using this application, you agree to the following terms and conditions:\n\n1. The data provided by the application is for informational purposes only. The developers of the application are not responsible for the accuracy of the data.\n\n2. The developers of the application are not responsible for the content of the images and 3D models provided by the application.\n\n3. The developers of the application are not responsible for the content of the external links provided by the application.\n\n4. The developers of the application reserve the right to include ads in the application to cover the maintenance and development costs of the project.\n\n5. The developers of the application reserve the right to modify the terms and conditions of the application at any time without prior notice.\n\n6. The developers of the application reserve the right to block users who do not comply with the terms and conditions of the application.\n\n7. The information provided by the users of the application will be used exclusively for the operation and can be used for statistical and reseach purposes and can be available for other users of the application, for this reason the users must be careful with the information they provide.\n\n8. Your data will be stored in a third party service (Google Firebase) and will be used to authenticate you in the application. The developers of the application are not responsible for the security of the data stored in the third party service.",
+  "museumDetails": "Museum Details",
+  "database": "Database",
+  "deleteLocalDatabases": "Delete Local Database",
+  "localDatabaseCleared": "Local database cleared",
+  "translations": "Translations",
+  "translators": "Translators",
+  "supportUs": "Support Us",
+  "pinchToZoom": "Pinch to zoom",
+  "dragToMove": "Drag to move"
 }
