--- a/assets/assets/lang/es.json
+++ b/assets/assets/lang/es.json
@@ -33,7 +33,7 @@
   "about": "Acerca de",
   "timeScale": "Escala de Tiempo",
   "acknowledgements": "Agradecimientos",
-  "acknowledgementsDescription": "Nos gustaría agradecer a todas las personas que han contribuido a este proyecto.",
+  "acknowledgementsDescription": "Nos gustaría agradecer a todas las personas que han contribuido a este proyecto con sus sugerencias, ideas y apoyo. También nos gustaría agradecer a las instituciones que proporcionan los servicios de API que hacen posible esta aplicación.",
   "informationSources": "Fuentes de Información",
   "informationSourcesDescription": "La información utilizada en esta aplicación proviene de varias fuentes confiables, incluyendo:",
   "imageSources": "Fuentes de Imágenes",
@@ -44,7 +44,7 @@
   "paleontologists": "Paleontólogos",
   "museums": "Museos",
   "researcherProfileTitle": "Perfil de Investigador",
-  "introText": "Como paleontólogo profesional, tendrás acceso a los registros que los usuarios suben a la base de datos para reportar nuevos hallazgos. Esta opción es exclusiva para paleontólogos profesionales y tiene como objetivo proteger el patrimonio paleontológico. Por lo tanto, requerimos verificar tu identidad antes de otorgar acceso.\n\nSer un paleontólogo profesional no se trata solo de tener un título profesional; la integridad ética también es necesaria. Por lo tanto, nos reservamos el derecho de aceptar tu solicitud si consideramos que has participado previamente en acciones que dañan, obstaculizan o perjudican el trabajo paleontológico ético y de calidad.",
+  "introText": "Como paleontólogo profesional, (en futuros lanzamientos) tendrás acceso a los registros que los usuarios suben a la base de datos para reportar nuevos hallazgos. Esta opción es exclusiva para paleontólogos profesionales y tiene como objetivo proteger el patrimonio paleontológico. Por lo tanto, requerimos verificar tu identidad antes de otorgar acceso.\n\nSer un paleontólogo profesional no se trata solo de tener un título profesional; la integridad ética también es necesaria. Por lo tanto, nos reservamos el derecho de aceptar tu solicitud si consideramos que has participado previamente en acciones que dañan, obstaculizan o perjudican el trabajo paleontológico ético y de calidad.",
   "degreeLabel": "Título",
   "nameLabel": "Nombre",
   "institutionLabel": "Institución",
@@ -85,8 +85,8 @@
   "resetFilters": "Restablecer filtros",
   "slideUpForSearchFilters": "Desliza hacia arriba para ver los filtros de búsqueda",
   "searchTaxonHint": "Buscar un taxón",
-  "phylum": "Filo",
-  "class": "Clase",
+  "phylum": "Filo/Division",
+  "className": "Clase",
   "order": "Orden",
   "family": "Familia",
   "genus": "Genero",
@@ -94,6 +94,7 @@
   "minMa": "Min Ma",
   "maxMa": "Max Ma",
   "earlyInterval": "Intervalo Temprano",
+  "lateInterval": "Intervalo Tardío",
   "occurrenceDetails": "Detalles de la Ocurrencia",
   "viewMediaButton": "Ver Multimedia",
   "loadingMessage": "Cargando...",
@@ -206,6 +207,12 @@
   "enterName": "Ingrese el nombre",
   "eventDateTime": "Fecha y Hora del Evento",
   "selectDateTime": "Seleccione fecha y hora",
+  "isMultyDayEvent": "Evento de varios días",
+  "eventEndDateTime": "Fecha y hora de finalización",
+  "selectEventDateTime": "Seleccionar fecha y hora del evento",
+  "selectEndDateTime": "Seleccionar fecha y hora de finalización",
+  "endDateRequired": "Se requiere fecha de finalización para eventos de varios días",
+  "eventEndDateMustBeAfterStartDate": "La fecha de finalización debe ser posterior a la fecha de inicio",
   "timeZone": "Zona Horaria",
   "selectTimeZone": "Seleccione zona horaria",
   "enterPlace": "Ingrese el lugar",
@@ -248,5 +255,19 @@
   "editRecord": "Editar Registro",
   "deleteRecord": "Eliminar Registro",
   "areYouSureDeleteRecord" : "¿Estás seguro de que deseas eliminar este registro?",
-  "delete": "Eliminar"
+  "delete": "Eliminar",
+  "descriptionOfTheApp": "Where is my fossil? es una aplicación desarrollada por el proyecto Mexicano Museo Virtual Nacional, la cuál permite explorar datos de ocurrencias fósiles de todo el mundo, explorar filogenias, ver imágenes y modelos 3D de fósiles, y mucho más. A pesar de que las bases de datos sobre ocurrencias, imagenes, filogenias y modelos 3D son gratuitas, las bases de datos de investigadores y museos son gestionadas de manera independiente por nosotros. El hospedaje y mantenimiento de dichas bases de datos está limitado a los recursos disponibles, por lo que tomamos la decisión de incluir anuncios en la aplicación para cubrir los costos de mantenimiento y desarrollo del proyecto. Futuras versiones de la aplicación podrían reducir o eliminar los anuncios si los recursos lo permiten o si se obtiene financiamiento de otras fuentes.",
+  "followUs": "Síguenos en nuestras redes o realiza una donación para apoyar el proyecto",
+  "acceptTermsText": "Al hacer clic en Registrarse, aceptas los Términos de Servicio y la Política de Privacidad",
+  "termsAndConditionsTitle": "Términos y Condiciones",
+    "termsAndConditionsContent": "Al utilizar esta aplicación, aceptas los siguientes términos y condiciones:\n\n1. Los datos proporcionados por la aplicación son solo para fines informativos. Los desarrolladores de la aplicación no son responsables de la exactitud de los datos.\n\n2. Los desarrolladores de la aplicación no son responsables del contenido de las imágenes y modelos 3D proporcionados por la aplicación.\n\n3. Los desarrolladores de la aplicación no son responsables del contenido de los enlaces externos proporcionados por la aplicación.\n\n4. Los desarrolladores de la aplicación se reservan el derecho de incluir anuncios en la aplicación para cubrir los costos de mantenimiento y desarrollo del proyecto.\n\n5. Los desarrolladores de la aplicación se reservan el derecho de modificar los términos y condiciones de la aplicación en cualquier momento sin previo aviso.\n\n6. Los desarrolladores de la aplicación se reservan el derecho de bloquear a los usuarios que no cumplan con los términos y condiciones de la aplicación.\n\n7. La información proporcionada por los usuarios de la aplicación será utilizada exclusivamente para el funcionamiento y puede ser utilizada con fines estadísticos y de investigación, y puede estar disponible para otros usuarios de la aplicación; por esta razón, los usuarios deben tener cuidado con la información que proporcionan.\n\n8. Tus datos serán almacenados en un servicio de terceros (Google Firebase) y serán utilizados para autenticarte en la aplicación. Los desarrolladores de la aplicación no son responsables de la seguridad de los datos almacenados en el servicio de terceros.",
+    "museumDetails": "Detalles del Museo",
+    "database": "Base de Datos",
+    "deleteLocalDatabases": "Eliminar Base de Datos Local",
+    "localDatabaseCleared": "Base de Datos Local Eliminada",
+    "translations": "Traducciones",
+    "translators": "Traductores",
+    "supportUs": "Apóyanos",
+    "pinchToZoom": "Pellizcar para hacer zoom",
+    "dragToMove": "Arrastrar para mover"
 }
