Update language files with additional translations and fix build configuration

--- a/assets/assets/lang/de.json
+++ b/assets/assets/lang/de.json
@@ -269,5 +269,45 @@
   "translators": "Übersetzer",
   "supportUs": "Unterstützen Sie uns",
   "pinchToZoom": "Zum Zoomen kneifen",
-  "dragToMove": "Zum Bewegen ziehen"
+  "dragToMove": "Zum Bewegen ziehen",
+  "radialView": "Radiale Ansicht",
+  "linearView": "Lineare Ansicht",
+  "openInExternalBrowser": "Im externen Browser öffnen",
+  "openLink": "Link öffnen",
+  "noDataToExport": "Keine Daten zum Exportieren",
+  "allTime": "Gesamte Zeit",
+  "timeRange": "Zeitraum",
+  "storagePermissionDenied": "Speicherberechtigung verweigert",
+  "dataExportedSuccessfully": "Daten erfolgreich exportiert",
+  "exportError": "Exportfehler",
+  "searchesByHour": "Suchanfragen nach Stunde",
+  "searchesByDay": "Suchanfragen nach Tag",
+  "topSearchTerms": "Top-Suchbegriffe",
+  "mostActiveUsers": "Aktivste Benutzer",
+  "searchStatistics": "Suchstatistiken",
+  "exportToCsv": "In CSV exportieren",
+  "refreshData": "Daten aktualisieren",
+  "chartType": "Diagrammtyp",
+  "today": "Heute",
+  "thisWeek": "Diese Woche",
+  "thisMonth": "Dieser Monat",
+  "last30Days": "Letzte 30 Tage",
+  "lastUpdated": "Zuletzt aktualisiert",
+  "totalSearches": "Gesamte Suchanfragen",
+  "errorLoadingData": "Fehler beim Laden der Daten",
+  "tryAgain": "Erneut versuchen",
+  "filteredResults": "Gefilterte Ergebnisse",
+  "stats": "Statistiken",
+  "taxonomicInformation": "Taxonomische Informationen",
+  "geologicalInformation": "Geologische Informationen",
+  "geographicLocation": "Geografischer Standort",
+  "coordinatePrecision": "Koordinatengenauigkeit",
+  "collectionInformation": "Sammlungsinformationen",
+  "databaseInformation": "Datenbankinformationen",
+  "viewOnPaleobiologyDatabase": "In der Paläobiologie-Datenbank ansehen",
+  "shareOccurrenceMessage": "Schau dir dieses Fossilvorkommen an, das ich in der WhereIsMyFossil-App gefunden habe!",
+  "taxon": "Taxon",
+  "pbdbOccurrenceId": "PBDB-Vorkommen-ID",
+  "viewFullDetails": "Vollständige Details anzeigen",
+  "viewOnApp": "Ansehen auf Where is my fossil"
 }
