--- a/assets/assets/lang/fr.json
+++ b/assets/assets/lang/fr.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome": "Bienvenue sur Where is My Fossil.\nToute l'histoire de la vie sur Terre au creux de votre main",
   "slide2": "Si vous aimez les fossiles autant que nous, vous saurez combien il est important de signaler une découverte pour que les experts puissent l'examiner et que nous puissions tous en apprendre davantage",
   "slide3": "Rappelez-vous également que le trafic de fossiles est illégal dans de nombreux pays. Les fossiles sont mieux dans un musée où tout le monde peut les voir que comme décoration dans votre maison",
@@ -44,7 +44,7 @@
   "paleontologists": "Paléontologues",
   "museums": "Musées",
   "researcherProfileTitle": "Profil du Chercheur",
-  "introText": "En tant que paléontologue professionnel, (dans les futures versions) vous aurez accès aux enregistrements que les utilisateurs téléchargent dans la base de données pour signaler de nouvelles découvertes. Cette option est exclusive aux paléontologues professionnels et vise à protéger le patrimoine paléontologique. Par conséquent, nous exigeons la vérification de votre identité avant d'accorder l'accès.\n\nÊtre un paléontologue professionnel ne consiste pas seulement à avoir un diplôme professionnel ; l'intégrité éthique est également nécessaire. Par conséquent, nous nous réservons le droit d'accepter votre candidature si nous considérons que vous avez précédemment engagé des actions qui endommagent, entravent ou nuisent au travail paléontologique éthique et de qualité.",
+  "introText": "En tant que paléontologue professionnel, (dans les futures versions) vous aurez accès aux enregistrements que les utilisateurs téléchargent dans la base de données pour signaler de nouvelles découvertes. Cette option est exclusive aux paléontologues professionnels et vise à protéger le patrimoine paléontologique. Par conséquent, nous exigeons la vérification de votre identité avant de vous en accorder l'accès.\n\nÊtre un paléontologue professionnel ne consiste pas seulement dans le fait d’avoir un diplôme professionnel ; l'intégrité éthique est également nécessaire. Par conséquent, nous nous réservons le droit de refuser votre candidature si nous considérons que vous avez précédemment commis des actions qui endommagent, entravent ou nuisent au travail paléontologique éthique et de qualité.",
   "degreeLabel": "Diplôme",
   "nameLabel": "Nom",
   "institutionLabel": "Institution",
@@ -168,7 +168,7 @@
   "stratigraphicComments": "Commentaires Stratigraphiques",
   "collectionType": "Type de Collection",
   "collectionMethods": "Méthodes de Collecte",
-  "collectionCoverage": "Couverture de la Collection",
+  "collectionCoverage": "Portée de la Collection",
   "taxonEnvironment": "Environnement du Taxon",
   "motility": "Motilité",
   "lifeHabit": "Habitude de Vie",
@@ -256,11 +256,11 @@
   "deleteRecord": "Supprimer l'Enregistrement",
   "areYouSureDeleteRecord": "Êtes-vous sûr de vouloir supprimer cet enregistrement ?",
   "delete": "Supprimer",
-  "descriptionOfTheApp": "Where is my fossil? est une application développée par le projet mexicain Museo Virtual Nacional, qui vous permet d'explorer les données d'occurrence des fossiles du monde entier, d'explorer les phylogénies, de visualiser des images et des modèles 3D de fossiles, et bien plus encore. Bien que les bases de données sur les occurrences, les images, les phylogénies et les modèles 3D soient gratuites, les bases de données des chercheurs et des musées sont gérées indépendamment par nous. L'hébergement et la maintenance de ces bases de données sont limités aux ressources disponibles, nous avons donc décidé d'inclure des annonces dans l'application pour couvrir les coûts de maintenance et de développement du projet. Les futures versions de l'application peuvent réduire ou éliminer les annonces si les ressources le permettent ou si un financement est obtenu auprès d'autres sources.",
+  "descriptionOfTheApp": "Where is my fossil? est une application développée par le projet mexicain Museo Virtual Nacional, qui vous permet d'explorer les données d'occurrence des fossiles du monde entier, d'explorer les phylogénies, de visualiser des images et des modèles 3D de fossiles, et bien plus encore. Bien que les bases de données sur les occurrences, les images, les phylogénies et les modèles 3D soient gratuites, les bases de données des chercheurs et des musées sont gérées indépendamment par nous-même. L'hébergement et la maintenance de ces bases de données sont limités aux ressources disponibles, nous avons donc décidé d'inclure des publicités dans l'application pour couvrir les coûts de maintenance et de développement du projet. Les futures versions de l'application pourront réduire ou éliminer les publicités si les ressources le permettent ou si un financement est obtenu auprès d'autres sources.",
   "followUs": "Suivez-nous sur les réseaux sociaux ou faites un don pour soutenir le projet",
   "acceptTermsText": "En cliquant sur le bouton 'Soumettre et se connecter avec Google', vous acceptez les termes et conditions de l'application",
   "termsAndConditionsTitle": "Termes et Conditions",
-  "termsAndConditionsContent": "En utilisant cette application, vous acceptez les termes et conditions suivants :\n\n1. Les données fournies par l'application sont à titre informatif uniquement. Les développeurs de l'application ne sont pas responsables de l'exactitude des données.\n\n2. Les développeurs de l'application ne sont pas responsables du contenu des images et des modèles 3D fournis par l'application.\n\n3. Les développeurs de l'application ne sont pas responsables du contenu des liens externes fournis par l'application.\n\n4. Les développeurs de l'application se réservent le droit d'inclure des annonces dans l'application pour couvrir les coûts de maintenance et de développement du projet.\n\n5. Les développeurs de l'application se réservent le droit de modifier les termes et conditions de l'application à tout moment sans préavis.\n\n6. Les développeurs de l'application se réservent le droit de bloquer les utilisateurs qui ne respectent pas les termes et conditions de l'application.\n\n7. Les informations fournies par les utilisateurs de l'application seront utilisées exclusivement pour le fonctionnement et peuvent être utilisées à des fins statistiques et de recherche et peuvent être disponibles pour d'autres utilisateurs de l'application, pour cette raison les utilisateurs doivent être prudents avec les informations qu'ils fournissent.\n\n8. Vos données seront stockées dans un service tiers (Google Firebase) et seront utilisées pour vous authentifier dans l'application. Les développeurs de l'application ne sont pas responsables de la sécurité des données stockées dans le service tiers.",
+  "termsAndConditionsContent": "En utilisant cette application, vous acceptez les termes et conditions suivants :\n\n1. Les données fournies par l'application sont à titre informatif uniquement. Les développeurs de l'application ne sont pas responsables de l'exactitude des données.\n\n2. Les développeurs de l'application ne sont pas responsables du contenu des images et des modèles 3D fournis par l'application.\n\n3. Les développeurs de l'application ne sont pas responsables du contenu des liens externes fournis par l'application.\n\n4. Les développeurs de l'application se réservent le droit d'inclure des publicités dans l'application pour couvrir les coûts de maintenance et de développement du projet.\n\n5. Les développeurs de l'application se réservent le droit de modifier les termes et conditions de l'application à tout moment sans préavis.\n\n6. Les développeurs de l'application se réservent le droit de bloquer les utilisateurs qui ne respectent pas les termes et conditions de l'application.\n\n7. Les informations fournies par les utilisateurs de l'application seront utilisées exclusivement pour le fonctionnement et peuvent être utilisées à des fins statistiques et de recherche et peuvent être disponibles pour d'autres utilisateurs de l'application, pour cette raison les utilisateurs doivent être prudents avec les informations qu'ils fournissent.\n\n8. Vos données seront stockées dans un service tiers (Google Firebase) et seront utilisées pour vous authentifier dans l'application. Les développeurs de l'application ne sont pas responsables de la sécurité des données stockées dans le service tiers.",
   "museumDetails": "Détails du Musée",
   "database": "Base de Données",
   "deleteLocalDatabases": "Supprimer les Bases de Données Locales",
@@ -269,5 +269,45 @@
   "translators": "Traducteurs",
   "supportUs": "Soutenez-nous",
   "pinchToZoom": "Pincer pour Zoomer",
-  "dragToMove": "Faites glisser pour Déplacer"
+  "dragToMove": "Faites glisser pour Déplacer",
+  "radialView": "Vue radiale",
+  "linearView": "Vue linéaire",
+  "openInExternalBrowser": "Ouvrir dans un navigateur externe",
+  "openLink": "Ouvrir le lien",
+  "noDataToExport": "Aucune donnée à exporter",
+  "allTime": "Tout le temps",
+  "timeRange": "Plage de temps",
+  "storagePermissionDenied": "Permission de stockage refusée",
+  "dataExportedSuccessfully": "Données exportées avec succès",
+  "exportError": "Erreur d'exportation",
+  "searchesByHour": "Recherches par heure",
+  "searchesByDay": "Recherches par jour",
+  "topSearchTerms": "Termes de recherche les plus populaires",
+  "mostActiveUsers": "Utilisateurs les plus actifs",
+  "searchStatistics": "Statistiques de recherche",
+  "exportToCsv": "Exporter en CSV",
+  "refreshData": "Actualiser les données",
+  "chartType": "Type de graphique",
+  "today": "Aujourd'hui",
+  "thisWeek": "Cette semaine",
+  "thisMonth": "Ce mois-ci",
+  "last30Days": "Les 30 derniers jours",
+  "lastUpdated": "Dernière mise à jour",
+  "totalSearches": "Total des recherches",
+  "errorLoadingData": "Erreur de chargement des données",
+  "tryAgain": "Réessayer",
+  "filteredResults": "Résultats filtrés",
+  "stats": "Statistiques",
+  "taxonomicInformation": "Information Taxonomique",
+  "geologicalInformation": "Information Géologique",
+  "geographicLocation": "Emplacement Géographique",
+  "coordinatePrecision": "Précision des Coordonnées",
+  "collectionInformation": "Informations sur la Collection",
+  "databaseInformation": "Informations de la Base de Données",
+  "viewOnPaleobiologyDatabase": "Voir sur la Base de Données de Paléobiologie",
+  "shareOccurrenceMessage": "Découvre cette occurrence fossile que j'ai trouvée sur l'application WhereIsMyFossil !",
+  "taxon": "Taxon",
+  "pbdbOccurrenceId": "ID d'Occurrence PBDB",
+  "viewFullDetails": "Voir Détails Complets",
+  "viewOnApp": "Voir sur Where is my fossil"
 }
