--- a/assets/assets/lang/it.json
+++ b/assets/assets/lang/it.json
@@ -269,5 +269,45 @@
   "translators": "Traduttori",
   "supportUs": "Supportaci",
   "pinchToZoom": "Pinch per Zoom",
-  "dragToMove": "Trascina per Spostare"
+  "dragToMove": "Trascina per Spostare",
+  "radialView": "Vista radiale",
+  "linearView": "Vista lineare",
+  "openInExternalBrowser": "Apri nel browser esterno",
+  "openLink": "Apri link",
+  "noDataToExport": "Nessun dato da esportare",
+  "allTime": "Tutto il tempo",
+  "timeRange": "Intervallo di tempo",
+  "storagePermissionDenied": "Permesso di archiviazione negato",
+  "dataExportedSuccessfully": "Dati esportati con successo",
+  "exportError": "Errore di esportazione",
+  "searchesByHour": "Ricerche per ora",
+  "searchesByDay": "Ricerche per giorno",
+  "topSearchTerms": "Termini di ricerca più popolari",
+  "mostActiveUsers": "Utenti più attivi",
+  "searchStatistics": "Statistiche di ricerca",
+  "exportToCsv": "Esporta in CSV",
+  "refreshData": "Aggiorna dati",
+  "chartType": "Tipo di grafico",
+  "today": "Oggi",
+  "thisWeek": "Questa settimana",
+  "thisMonth": "Questo mese",
+  "last30Days": "Ultimi 30 giorni",
+  "lastUpdated": "Ultimo aggiornamento",
+  "totalSearches": "Totale ricerche",
+  "errorLoadingData": "Errore nel caricamento dei dati",
+  "tryAgain": "Riprova",
+  "filteredResults": "Risultati filtrati",
+  "stats": "Statistiche",
+  "taxonomicInformation": "Informazioni Tassonomiche",
+  "geologicalInformation": "Informazioni Geologiche",
+  "geographicLocation": "Posizione Geografica",
+  "coordinatePrecision": "Precisione delle Coordinate",
+  "collectionInformation": "Informazioni sulla Collezione",
+  "databaseInformation": "Informazioni sul Database",
+  "viewOnPaleobiologyDatabase": "Visualizza nel Database di Paleobiologia",
+  "shareOccurrenceMessage": "Guarda questa occorrenza fossile che ho trovato nell'app WhereIsMyFossil!",
+  "taxon": "Taxon",
+  "pbdbOccurrenceId": "ID Occorrenza PBDB",
+  "viewFullDetails": "Visualizza Dettagli Completi",
+  "viewOnApp": "Visualizza su Where is my fossil"
 }
