--- a/assets/assets/lang/pt.json
+++ b/assets/assets/lang/pt.json
@@ -269,5 +269,45 @@
   "translators": "Tradutores",
   "supportUs": "Apoie-nos",
   "pinchToZoom": "Beliscar para Ampliar",
-  "dragToMove": "Arrastar para Mover"
+  "dragToMove": "Arrastar para Mover",
+  "radialView": "Vista radial",
+  "linearView": "Vista linear",
+  "openInExternalBrowser": "Abrir no navegador externo",
+  "openLink": "Abrir link",
+  "noDataToExport": "Nenhum dado para exportar",
+  "allTime": "Todo o tempo",
+  "timeRange": "Intervalo de tempo",
+  "storagePermissionDenied": "Permissão de armazenamento negada",
+  "dataExportedSuccessfully": "Dados exportados com sucesso",
+  "exportError": "Erro de exportação",
+  "searchesByHour": "Pesquisas por hora",
+  "searchesByDay": "Pesquisas por dia",
+  "topSearchTerms": "Principais termos de pesquisa",
+  "mostActiveUsers": "Usuários mais ativos",
+  "searchStatistics": "Estatísticas de pesquisa",
+  "exportToCsv": "Exportar para CSV",
+  "refreshData": "Atualizar dados",
+  "chartType": "Tipo de gráfico",
+  "today": "Hoje",
+  "thisWeek": "Esta semana",
+  "thisMonth": "Este mês",
+  "last30Days": "Últimos 30 dias",
+  "lastUpdated": "Última atualização",
+  "totalSearches": "Total de pesquisas",
+  "errorLoadingData": "Erro ao carregar dados",
+  "tryAgain": "Tente novamente",
+  "filteredResults": "Resultados filtrados",
+  "stats": "Estatísticas",
+  "taxonomicInformation": "Informação Taxonômica",
+  "geologicalInformation": "Informação Geológica",
+  "geographicLocation": "Localização Geográfica",
+  "coordinatePrecision": "Precisão das Coordenadas",
+  "collectionInformation": "Informação da Coleção",
+  "databaseInformation": "Informação do Banco de Dados",
+  "viewOnPaleobiologyDatabase": "Ver no Banco de Dados de Paleobiologia",
+  "shareOccurrenceMessage": "Confira esta ocorrência fóssil que encontrei no aplicativo WhereIsMyFossil!",
+  "taxon": "Táxon",
+  "pbdbOccurrenceId": "ID de Ocorrência PBDB",
+  "viewFullDetails": "Ver Detalhes Completos",
+  "viewOnApp": "Ver no Where is my fossil"
 }
